# amazon-sp-api

./: .gitmodules  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
amazon-sp-api/: Cargo.toml
amazon-sp-api/src/: config.rs  constants.rs  lib.rs
amazon_sp_api/: all.html  enum.SpApiEndpoint.html  index.html  sidebar-items.js
amazon_sp_api/apis/: index.html
amazon_sp_api/client/: index.html  sidebar-items.js  struct.SpApiClient.html
amazon_sp_api/config/: index.html  sidebar-items.js  struct.SpApiConfig.html
amazon_sp_api/constants/: enum.SpApiEndpoint.html
amazon_sp_api/error/: enum.Error.html  index.html
amazon_sp_api_shared/: all.html  index.html  sidebar-items.js
amazon_sp_api_shared/auth/: enum.AuthScope.html  index.html  sidebar-items.js  struct.AuthState.html
amazon_sp_api_shared/configuration/: index.html  sidebar-items.js  struct.AWSv4Key.html  struct.Configuration.html  struct.RestrictedDataToken.html
amazon_sp_api_shared/error/: enum.SharedError.html  index.html  sidebar-items.js
amazon_sp_api_shared/helpers/: fn.deserialize_opt_bool_from_string.html  fn.deserialize_opt_i32_with_parse.html  index.html  sidebar-items.js
amazon_sp_api_shared/request/: index.html  sidebar-items.js  struct.Error.html  struct.ErrorList.html  struct.ResponseContent.html  struct.ResponseError.html  struct.UrlBuilder.html
amazon_sp_aplus_content/: all.html  index.html
amazon_sp_aplus_content/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_aplus_content/models/: index.html  sidebar-items.js
amazon_sp_authorization/: all.html  index.html
amazon_sp_authorization/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_authorization/models/: index.html  sidebar-items.js
amazon_sp_catalog_items/: all.html  index.html
amazon_sp_catalog_items/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_catalog_items/models/: index.html  sidebar-items.js
amazon_sp_easy_ship/: all.html  index.html
amazon_sp_easy_ship/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_easy_ship/models/: index.html  sidebar-items.js
amazon_sp_fba_inbound_eligibility/: all.html  index.html
amazon_sp_fba_inbound_eligibility/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_fba_inbound_eligibility/models/: index.html  sidebar-items.js
amazon_sp_fba_inventory/: all.html  index.html
amazon_sp_fba_inventory/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_fba_inventory/models/: index.html  sidebar-items.js
amazon_sp_fba_small_and_light/: all.html  index.html
amazon_sp_fba_small_and_light/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_fba_small_and_light/models/: index.html  sidebar-items.js
amazon_sp_feeds/: all.html  index.html
amazon_sp_feeds/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_feeds/models/: index.html  sidebar-items.js
amazon_sp_finances/: all.html  index.html
amazon_sp_finances/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_finances/models/: index.html  sidebar-items.js
amazon_sp_fulfillment_inbound/: all.html  index.html
amazon_sp_fulfillment_inbound/apis/: enum.Error.html  fn.urlencode.html  index.html  sidebar-items.js  struct.ResponseContent.html
amazon_sp_fulfillment_outbound/: all.html  index.html
amazon_sp_listings_items/: all.html  index.html
amazon_sp_listings_restrictions/: all.html  index.html
amazon_sp_merchant_fulfillment/: all.html  index.html
amazon_sp_messaging/: all.html  index.html
amazon_sp_messaging/apis/: index.html  (+4 more)
amazon_sp_notifications/: all.html  index.html
amazon_sp_orders/: all.html  index.html
amazon_sp_product_fees/: all.html  index.html
amazon_sp_product_pricing/: all.html  index.html
amazon_sp_product_type_definitions/: all.html  index.html
amazon_sp_reports/: all.html  index.html
amazon_sp_sales/: all.html  index.html
amazon_sp_sellers/: all.html  index.html
amazon_sp_services/: all.html  index.html
amazon_sp_shipment_invoicing/: all.html  index.html
amazon_sp_shipping/: all.html  index.html
amazon_sp_solicitations/: all.html  index.html
amazon_sp_tokens/: all.html  index.html
amazon_sp_uploads/: all.html  index.html
amazon_sp_vendor_direct_fulfillment_inventory/: all.html  index.html
amazon_sp_vendor_direct_fulfillment_orders/: all.html  index.html
amazon_sp_vendor_direct_fulfillment_payments/: all.html  index.html
amazon_sp_vendor_direct_fulfillment_sandbox_test_data/: all.html  index.html
amazon_sp_vendor_direct_fulfillment_shipping/: all.html  index.html
amazon_sp_vendor_direct_fulfillment_transactions/: all.html  index.html
amazon_sp_vendor_invoices/: all.html  index.html
amazon_sp_vendor_orders/: all.html  index.html
amazon_sp_vendor_shipments/: all.html  index.html  sidebar-items.js
amazon_sp_vendor_transaction_status/: all.html  index.html
binaries/cli/: Cargo.toml
binaries/cli/src/: auth.rs  exchange_refresh_token.rs  generate.rs  main.rs  migrate_mws_auth_token.rs  refresh_access_token.rs
cli/: all.html  enum.Cmd.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
crates/amazon-sp-api/: Cargo.toml
crates/amazon-sp-api-shared/: Cargo.toml
crates/amazon-sp-api-shared/src/: auth.rs  configuration.rs  error.rs  helpers.rs  lib.rs  request.rs
crates/amazon-sp-api/src/: client.rs  config.rs  constants.rs  error.rs  lib.rs
openapi/: Cargo.mustache  api.mustache  api_mod.mustache  config.yaml  model.mustache
publish/: all.html  enum.Cmd.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
(+6138 files in other folders)
