[workspace]
members = [
  "binaries/cli",

  "crates/amazon-sp-aplus-content",
  "crates/amazon-sp-authorization",
  "crates/amazon-sp-catalog-items",
  "crates/amazon-sp-easy-ship",
  "crates/amazon-sp-fba-inbound-eligibility",
  "crates/amazon-sp-fba-inventory",
  "crates/amazon-sp-fba-small-and-light",
  "crates/amazon-sp-feeds",
  "crates/amazon-sp-finances",
  "crates/amazon-sp-fulfillment-inbound",
  "crates/amazon-sp-fulfillment-outbound",
  "crates/amazon-sp-listings-items",
  "crates/amazon-sp-listings-restrictions",
  "crates/amazon-sp-merchant-fulfillment",
  "crates/amazon-sp-messaging",
  "crates/amazon-sp-notifications",
  "crates/amazon-sp-orders",
  "crates/amazon-sp-product-fees",
  "crates/amazon-sp-product-pricing",
  "crates/amazon-sp-product-type-definitions",
  "crates/amazon-sp-reports",
  "crates/amazon-sp-sales",
  "crates/amazon-sp-sellers",
  "crates/amazon-sp-services",
  "crates/amazon-sp-shipment-invoicing",
  "crates/amazon-sp-shipping",
  "crates/amazon-sp-solicitations",
  "crates/amazon-sp-tokens",
  "crates/amazon-sp-uploads",
  "crates/amazon-sp-vendor-direct-fulfillment-inventory",
  "crates/amazon-sp-vendor-direct-fulfillment-orders",
  "crates/amazon-sp-vendor-direct-fulfillment-payments",
  "crates/amazon-sp-vendor-direct-fulfillment-sandbox-test-data",
  "crates/amazon-sp-vendor-direct-fulfillment-shipping",
  "crates/amazon-sp-vendor-direct-fulfillment-transactions",
  "crates/amazon-sp-vendor-invoices",
  "crates/amazon-sp-vendor-orders",
  "crates/amazon-sp-vendor-shipments",
  "crates/amazon-sp-vendor-transaction-status"
]