[workspace]
members = [
  "binaries/gen",
  "binaries/cli",

  "crates/amazon-sp-api",
  "crates/amazon-sp-api-shared",

  "generated/amazon-sp-aplus-content",
  "generated/amazon-sp-authorization",
  "generated/amazon-sp-catalog-items",
  "generated/amazon-sp-easy-ship",
  "generated/amazon-sp-fba-inbound-eligibility",
  "generated/amazon-sp-fba-inventory",
  "generated/amazon-sp-fba-small-and-light",
  "generated/amazon-sp-feeds",
  "generated/amazon-sp-finances",
  "generated/amazon-sp-fulfillment-inbound",
  "generated/amazon-sp-fulfillment-outbound",
  "generated/amazon-sp-listings-items",
  "generated/amazon-sp-listings-restrictions",
  "generated/amazon-sp-merchant-fulfillment",
  "generated/amazon-sp-messaging",
  "generated/amazon-sp-notifications",
  "generated/amazon-sp-orders",
  "generated/amazon-sp-product-fees",
  "generated/amazon-sp-product-pricing",
  "generated/amazon-sp-product-type-definitions",
  "generated/amazon-sp-reports",
  "generated/amazon-sp-sales",
  "generated/amazon-sp-sellers",
  "generated/amazon-sp-services",
  "generated/amazon-sp-shipment-invoicing",
  "generated/amazon-sp-shipping",
  "generated/amazon-sp-solicitations",
  "generated/amazon-sp-tokens",
  "generated/amazon-sp-uploads",
  "generated/amazon-sp-vendor-direct-fulfillment-inventory",
  "generated/amazon-sp-vendor-direct-fulfillment-orders",
  "generated/amazon-sp-vendor-direct-fulfillment-payments",
  "generated/amazon-sp-vendor-direct-fulfillment-sandbox-test-data",
  "generated/amazon-sp-vendor-direct-fulfillment-shipping",
  "generated/amazon-sp-vendor-direct-fulfillment-transactions",
  "generated/amazon-sp-vendor-invoices",
  "generated/amazon-sp-vendor-orders",
  "generated/amazon-sp-vendor-shipments",
  "generated/amazon-sp-vendor-transaction-status"
]