[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"

amazon-sp-api = { path = "../../crates/amazon-sp-api" }

amazon-sp-authorization = { path = "../../generated/amazon-sp-authorization" }