[package]
name = "amazon-sp-api-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serde_urlencoded = "0.7.1"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
aws-sigv4 = "0.46.0"
http = "0.2.5"
secrecy = "0.8.0"
parking_lot = "0.12.1"
thiserror = "1.0.31"
tracing = "0.1.36"

[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]